# clin

./: .gitignore  CMakeLists.txt  LICENSE  clin.c  clin.inc  logging.h
cmake/: Findclin.cmake
example/: example.c  example_lib.c
ext/CL/: cl_types_only.h  extra_commqueueprop.h
generator/: generated.h  intercept_gen.rb  opencl_dll_exports.txt
